--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,33 +1,8 @@
+  @import './shared/fonts' ;
 
-@font-face {
-  font-family: 'Montserrat';
-  src: url('/fonts/Montserrat-Regular.ttf');
-  font-weight: normal;
-  font-style: normal;
-}
+  // Pages
+  @import './index';
 
-@font-face {
-  font-family: 'Montserrat';
-  src: url('/fonts/Montserrat-Bold.ttf');
-  font-weight: bold;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url('/fonts/Montserrat-Light.ttf');
-  font-weight: lighter;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url('/fonts/Montserrat-Italic.ttf');
-  font-weight: normal;
-  font-style: italic;
-}
-
-html, body {
-  font-family: 'Montserrat', 'Helvetica' !important;
-}
-
+  html, body {
+    font-family: 'Montserrat', 'Helvetica' !important;
+  }
