--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,8 +1,25 @@
-  @import './shared/fonts' ;
 
-  // Pages
-  @import './index';
+@import './shared/fonts';
 
-  html, body {
-    font-family: 'Montserrat', 'Helvetica' !important;
-  }
+// Components
+@import './components/header';
+
+// Pages
+@import './index';
+
+html, body {
+  height: 100%;
+  width: 100%;
+  font-family: 'Montserrat', 'Helvetica' !important;
+}
+
+.absolute {
+  position: absolute;
+}
+
+.self-typed {
+  font-size: 31px;
+  color: white;
+  font-weight: bold;
+  letter-spacing: 2px;
+}
