change to functionals component

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -7,6 +7,11 @@
 // Pages
 @import './index';
 
+.base-page {
+  padding-top: 150px;
+  color: white;
+}
+
 html, body {
   height: 100%;
   width: 100%;
