--- a/styles/main.scss
+++ b/styles/main.scss
@@ -18,6 +18,10 @@ html, body {
   font-family: 'Montserrat', 'Helvetica' !important;
 }
 
+.clikable{
+  cursor: pointer;
+}
+
 .absolute {
   position: absolute;
 }
