--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -5,7 +5,15 @@
   z-index: 15;
   padding: 40px;
 
+  &.with-bg {
+    background-color: #2C2E50;
+    padding: 30px;
+  }
+
   .port-navbar {
+
+
+
     &-brand {
       color: white;
       font-size: 24px;
