--- a/styles/main.scss
+++ b/styles/main.scss
@@ -8,19 +8,28 @@
 @import './index';
 @import './portfolios';
 
-.base-page {
-  padding-top: 150px;
-  color: white;
-}
-
 html, body {
   height: 100%;
   width: 100%;
   font-family: 'Montserrat', 'Helvetica' !important;
 }
 
-.clikable{
+.clickable {
   cursor: pointer;
+}
+
+.base-page {
+  padding-top: 150px;
+  color: black;
+  background-color: #ecedee;
+  min-height: 100vh;
+
+  .page-header-title {
+    font-weight: bold;
+    display: inline-block;
+    margin-bottom: 20px;
+  }
+
 }
 
 .absolute {
