--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -6,14 +6,11 @@
   padding: 40px;
 
   &.with-bg {
-    background-color: #2C2E50;
+    background-color: #2C3E50;
     padding: 30px;
   }
 
   .port-navbar {
-
-
-
     &-brand {
       color: white;
       font-size: 24px;
@@ -45,7 +42,6 @@
   }
 
   .port-dropdown-menu {
-
     .dropdown-item:active {
       background-color: #f5f5f5;
     }
@@ -64,4 +60,12 @@
       margin-right: 10px;
     }
   }
+}
+
+.port-navbar.transparent.is-open {
+  background-color: #2C3E50;
+}
+
+.port-navbar.transparent.is-close {
+  transition: 1s;
 }
